--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "test": "clear && nodemon src/app.js -e js,mjs,json,html,css",
+    "test": "nodemon src/app.js -e js,mjs,json,html,css",
     "start": "node src/app.js"
   },
   "keywords": [],
